Base64Demo方法适应java11修改